crustrace-core/tests/snapshots/ret__bare_ret_parsing.snap
---
source: crustrace-core/tests/ret.rs
expression: "apply_instrument(args, item)"
---
fn test_function(x: u32) -> u32 {
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "test_function", x = x);
    let __tracing_attr_guard = __tracing_attr_span.enter();
    let __tracing_attr_ret = (|| x + 1)();
    tracing :: event ! (tracing :: Level :: INFO , return_value = ? __tracing_attr_ret);
    __tracing_attr_ret
}
