crustrace-core/tests/snapshots/ret__ret_overrides_function_level.snap
---
source: crustrace-core/tests/ret.rs
expression: "apply_instrument(args, item)"
---
fn test_function() -> Result<i32, String> {
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "test_function");
    let __tracing_attr_guard = __tracing_attr_span.enter();
    let __tracing_attr_ret = (|| Ok(42))();
    tracing :: event ! (tracing :: Level :: ERROR , return_value = ? __tracing_attr_ret);
    __tracing_attr_ret
}
