crustrace-core/tests/snapshots/ret__ret_with_async_function.snap
---
source: crustrace-core/tests/ret.rs
expression: "apply_instrument(args, item)"
---
async fn async_function() -> Result<String, std::io::Error> {
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "async_function");
    let __tracing_attr_guard = __tracing_attr_span.enter();
    let __tracing_attr_ret = (|| Ok("async result".to_string()))();
    tracing :: event ! (tracing :: Level :: INFO , return_value = ? __tracing_attr_ret);
    __tracing_attr_ret
}
