crustrace-core/tests/snapshots/ret__ret_with_complex_return_type.snap
---
source: crustrace-core/tests/ret.rs
expression: "apply_instrument(args, item)"
---
fn complex_return() -> impl Iterator<Item = Result<String, std::io::Error>> {
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "complex_return");
    let __tracing_attr_guard = __tracing_attr_span.enter();
    let __tracing_attr_ret = (|| std::iter::once(Ok("test".to_string())))();
    tracing :: event ! (tracing :: Level :: DEBUG , return_value = ? __tracing_attr_ret);
    __tracing_attr_ret
}
