crustrace-core/tests/snapshots/ret__ret_with_format_and_level.snap
---
source: crustrace-core/tests/ret.rs
expression: "apply_instrument(args, item)"
---
fn test_function() -> Vec<String> {
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "test_function");
    let __tracing_attr_guard = __tracing_attr_span.enter();
    let __tracing_attr_ret = (|| vec!["a".to_string(), "b".to_string()])();
    tracing :: event ! (tracing :: Level :: TRACE , return_value = ? __tracing_attr_ret);
    __tracing_attr_ret
}
