crustrace-core/tests/snapshots/ret__ret_with_generic_function.snap
---
source: crustrace-core/tests/ret.rs
expression: "apply_instrument(args, item)"
---
fn generic_function<T: Clone + std::fmt::Debug>(value: T) -> T {
    let __tracing_attr_span =
        tracing::span!(tracing::Level::INFO, "generic_function", value = value);
    let __tracing_attr_guard = __tracing_attr_span.enter();
    let __tracing_attr_ret = (|| value.clone())();
    tracing :: event ! (tracing :: Level :: INFO , return_value = ? __tracing_attr_ret);
    __tracing_attr_ret
}
